--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
-    "mdbreact": "^4.27.0",
+    "mdbreact": "^5.2.0",
     "namor": "^2.0.2",
     "path": "^0.12.7",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^5.0.1",
     "react-table": "^7.2.1",
     "react-table-filter": "^2.0.1",
     "reactstrap": "^8.5.1"
